--- a/mengkki/package.json
+++ b/mengkki/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,8 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1"
+    "@prisma/cli": "^2.13.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   }
 }
