--- a/seungjin/package.json
+++ b/seungjin/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1"
+    "@prisma/cli": "^2.13.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   }
 }
